# PortableVideoAdapter

./: .gitmodules  CMakeLists.txt  license.md  main.c  readme.md
.github/workflows/: main.yml
hardware/outbound-hat/: PCB_outbound-video-waveshare_2026-01-24.json  SCH_outbound-video-waveshare_2026-01-24.json
hardware/portable-hat/: PCB_portable-video-waveshare_2026-01-24.json  SCH_portable-video-waveshare_2026-01-24.json
overrides/: dvi_serialiser.pio
